# dsresumatch

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/dsresumatch/: evaluate_keywords.py  pdf_cv_processing.py  resume_scoring.py  sections_check.py
tests/: conftest.py  test_dsresumatch.py  test_evaluate_keywords.py  test_missing_section.py  test_pdf_cv_processing.py  test_resume_scoring.py
